--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
+    "clipboard-copy": "^4.0.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
@@ -13,9 +15,11 @@
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
